Apply a title filter to the sketch name

--- a/ginpar/themes/gart/templates/sketch.html
+++ b/ginpar/themes/gart/templates/sketch.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="form">
-        <h3> This is {{sketch}}</h3>
+        <h3>{{sketch | title}}</h3>
         {{ form }}
     </div>
     <div id="artwork-container">
