--- a/ginpar/themes/gart/static/css/sketch.css
+++ b/ginpar/themes/gart/static/css/sketch.css
@@ -1,36 +1,48 @@
+html,
 body {
-	display:flex;
+  height: 100%;
+  margin: 0;
+  background-color: #fbfbfb;
 }
 
-.form{
-	display:flex;
-	flex-direction:column;
-	padding:1em;
+.fscreen {
+  display: flex;
+  flex-direction: column;
 }
 
-form{
-	display:flex;
-	flex-direction: column;
+.content {
+  display: flex;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+
+  padding: 1em;
+  margin: 1em;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
 }
 
 #artwork-container {
-	height: 100vh;
-    width: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 
-	position: relative;
+  padding: 1em;
+  margin: 1em;
 }
 
+canvas {
+  max-width: 100% !important;
+  height: auto !important;
+}
 
-#artwork-container  canvas {
-	border: 1px solid black;
-	max-height: 100%;
-    max-width: 100%;
-    height: auto;
-    width: auto;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
+.footer {
+  flex: 0 1 auto;
+  padding: 0 1em 1em;
+  margin: 0 1em;
 }
