--- a/ginpar/tools/templates/config.json.jinja2
+++ b/ginpar/tools/templates/config.json.jinja2
@@ -1,9 +1,10 @@
 {
-    "AUTHOR": {{author or '"David Omar"'}},
-    "SITENAME": {{sitename or '"Ginpar"'}},
-    "THEME": {{theme or '"gart"'}},
-    "PATH": "content",
-    "SRIPTS": {
-        "P5": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"
+    "author": {{author or '"David Omar"'}},
+    "sitename": {{sitename or '"Ginpar"'}},
+    "description": {{description or '"Interactive Sketches"'}},
+    "theme": {{theme or '"gart"'}},
+    "path": "content",
+    "scripts": {
+        "p5": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"
     }
 }
