--- a/ginpar/themes/gart/static/css/sketch.css
+++ b/ginpar/themes/gart/static/css/sketch.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono&display=swap');
+
 html,
 body {
   height: 100%;
@@ -45,4 +47,139 @@ canvas {
   flex: 0 1 auto;
   padding: 0 1em 1em;
   margin: 0 1em;
+}
+
+label {
+  color: #666;
+  margin-bottom: .5em;
+  font-size: .75em;
+}
+
+input {
+  font-family: "Montserrat";
+  border:none;
+  border-bottom: solid #eee 2px;
+  padding: .25em;
+  background-color: inherit;
+}
+
+input:focus {
+  border-bottom: solid #ccc 2px;
+  outline: none;
+  box-shadow: none;
+}
+
+input:active {
+  border-bottom: solid #ccc 2px;
+  outline: none;
+  box-shadow: none;
+}
+
+button {
+  border: none;
+  background-color: #e8e8e8;
+  margin: 0.2em;
+  padding: 0.2em;
+}
+
+.form-field{
+  display: flex;
+  flex-direction: column;
+  margin: .5em 0;
+  }
+
+a {
+  flex: 0 1 min-content;
+}
+
+.home-link{
+  font-family: "Fira Code";
+  margin-bottom: 1em;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 5.5px 0;
+border-bottom: none !important;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: #eee;
+  border-radius: 25px;
+  border: 0px solid rgba(0, 0, 0, 0);
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  height: 14px;
+  width: 14px;
+  border-radius: 7px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -5.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #eee;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  background: #eee;
+  border-radius: 25px;
+  border: 0px solid rgba(0, 0, 0, 0);
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  height: 14px;
+  width: 14px;
+  border-radius: 7px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #eee;
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type=range]::-ms-fill-upper {
+  background: #eee;
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: 50px;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  height: 14px;
+  width: 14px;
+  border-radius: 7px;
+  background: #ffffff;
+  cursor: pointer;
+  height: 3px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #eee;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #eee;
 }
