--- a/ginpar/themes/gart/templates/index.html
+++ b/ginpar/themes/gart/templates/index.html
@@ -1,8 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3> This is list of sketches</h3>
-    {% for s in sketches %}
-        {% set s_title = s.split("/")[-1].split(".")[0] %}
-        <li> <a href="{{s_title}}">{{s_title}}</a></li>
-    {% endfor %}
+<div class="container">
+    <article class="posts">
+        <section>
+            <h1> {{ site.sitename }}</h1>
+            <h3>{{ site.description }} by {{ site.author }}</h3>
+            {% for s in sketches %}
+            {% set s_title = s.split("/")[-1].split(".")[0] %}
+            <li> <a href="{{s_title}}">{{s_title | unkebab | title}}</a></li>
+            {% endfor %}
+        </section>
+    </article>
+
+</div>
+
 {% endblock %}
