--- a/ginpar/tools/templates/config.json.jinja2
+++ b/ginpar/tools/templates/config.json.jinja2
@@ -4,7 +4,8 @@
     "description": {{description or '"Interactive Sketches"'}},
     "theme": {{theme or '"gart"'}},
     "path": "content",
-    "scripts": {
-        "p5": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"
-    }
+    "scripts": [{
+        "tag": "p5",
+        "url": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"
+    }]
 }
