--- a/ginpar/themes/gart/templates/base.html
+++ b/ginpar/themes/gart/templates/base.html
@@ -14,8 +14,7 @@
         {% endblock %}
 </body>
 
-<script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js">
-</script>
-<script language="javascript" type="text/javascript" src="./sketch.js" defer></script>
+{% block scripts %}
+{% endblock scripts %}
 
 </html>
