Change the content of the buttons and underline hotkey

--- a/ginpar/themes/gart/templates/sketch.html
+++ b/ginpar/themes/gart/templates/sketch.html
@@ -14,21 +14,15 @@
                         {{ form }}
 
                         <button type="button" onclick="ginpar_RandomizeForm();">
-                            Randomize
-                            <br>
-                            (R)
+                            <u>R</u>andomize
                         </button>
 
                         <button type="button" onclick="updateSketch();">
-                            Update
-                            <br>
-                            (Space bar)
+                            <u>D</u>raw
                         </button>
 
                         <button type="button" onclick="ginpar_saveImage();">
-                            Download
-                            <br>
-                            (S)
+                            <u>S</u>ave
                         </button>
             </div>
             <div id="artwork-container"></div>
