Render jinja templates for the html inputs from generators
Instead of relying on string formatting to create the html elements for
the form inputs, create templates for jinja2 to render.

TODO:
Write instructions on how to develop a custom theme

--- a/ginpar/templates/input.html
+++ b/ginpar/templates/input.html
@@ -2,5 +2,5 @@
     <label for="{{ id }}">
         {{ name }}
     </label>
-    <input name="{{ id }}" {{ attrs }}>
+    <input name="{{ id }}" {{ attrs | getattrs }}>
 </div>
