--- a/ginpar/themes/gart/templates/sketch.html
+++ b/ginpar/themes/gart/templates/sketch.html
@@ -13,15 +13,15 @@
                     < Go back home</a> </div> <h3>{{sketch | title}}</h3>
                         {{ form }}
 
-                        <button type="button" onclick="ginpar_RandomizeForm();">
+                        <!-- <button type="button" onclick="randomizeVars();">
                             <u>R</u>andomize
                         </button>
 
-                        <button type="button" onclick="updateSketch();">
+                        <button type="button" onclick="updateVars(); setup(); draw();">
                             <u>D</u>raw
-                        </button>
+                        </button> -->
 
-                        <button type="button" onclick="ginpar_saveImage();">
+                        <button type="button" onclick="save();">
                             <u>S</u>ave
                         </button>
             </div>
