--- a/ginpar/templates/input.html
+++ b/ginpar/templates/input.html
@@ -2,5 +2,5 @@
     <label for="{{ id }}">
         {{ name }}
     </label>
-    <input name="{{ id }}" id = "{{ id }}" {{ attrs | getattrs }}>
+    <input name="{{ id }}" id = "{{ id }}" {{ attrs | getattrs }} onchange="updateVars(); setup(); draw();">
 </div>
