--- a/ginpar/templates/config.json.jinja2
+++ b/ginpar/templates/config.json.jinja2
@@ -3,7 +3,7 @@
     "sitename": {{sitename or '"Ginpar"'}},
     "description": {{description or '"Interactive Sketches"'}},
     "theme": {{theme or '"gart"'}},
-    "path": "content",
+    "content_path": {{content_path or '"sketches"'}},
     "scripts": [{
         "tag": "p5",
         "url": "https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"
