Modify the name of the generated JS functions appending ginpar_
Instead of `myFunction`, name them `ginpar_myFunction` to avoid easy
collisions if users define `myFunction`.

They're still possible, but they must also append `ginpar_`.

Implement a `ginpar_save` function that will save the image using the
random and noise seeds in the name.

--- a/ginpar/templates/input.html
+++ b/ginpar/templates/input.html
@@ -2,5 +2,5 @@
     <label for="{{ id }}">
         {{ name }}
     </label>
-    <input name="{{ id }}" id = "{{ id }}" {{ attrs | getattrs }} onchange="updateVars(); setup(); draw();">
+    <input name="{{ id }}" id = "{{ id }}" {{ attrs | getattrs }} onchange="ginpar_updateVars(); setup(); draw();">
 </div>
